--- a/source/_posts/2016-10-24-20161024-reading-dark-time.markdown
+++ b/source/_posts/2016-10-24-20161024-reading-dark-time.markdown
@@ -3,9 +3,8 @@ author: xsstomy
 date: 2016-10-24 02:28:39+00:00
 layout: post
 title: 暗时间
-pid: 19
-tags:
-- 暗时间
+tags: 读书感
+categories: 读后感
 ---
 
 ## 前言
