--- a/source/_posts/2015-11-27-3.md
+++ b/source/_posts/2015-11-27-3.md
@@ -5,10 +5,11 @@ layout: post
 title: Egret赛车游戏之LoadingUI界面
 pid: 3
 tags:
-- egret教程
+- Egret
 - 赛车游戏
 - EgretWing
-- 白鹭引擎
+categories: Egret
+
 ---
 
 
