[u] 添加想象力

--- a/source/_posts/2017-02-09-如何读一本书.md
+++ b/source/_posts/2017-02-09-如何读一本书.md
@@ -1,5 +1,5 @@
 ---
-title: 如何读一本书
+title: 如何阅读一本书
 date: 2017-02-09 21:38:45
 tags: 
 - 如何阅读一本书
@@ -15,7 +15,7 @@ categories: 只读经典
 这是一本普及知识的书籍同时也是一本讲解技法的书籍。这本书介绍了阅读的基本概念，同时也介绍了该如何去阅读一本书。这是一本值得阅读的书籍。
 
 ## 阅读的层级
-
+`
 本书讲阅读分为了四层：
 
 1. 基础阅读
