--- a/source/_posts/2017-03-30-思维改变生活：想象力.md
+++ b/source/_posts/2017-03-30-思维改变生活：想象力.md
@@ -14,8 +14,9 @@ categories: 思维改变生活
 ## 思维改变生活
 
 我们先把书籍简单分类一下。这里的分类是根据《如何阅读一本书》里面初始介绍的
-一、一类是获取知识，即增长智慧，提高自己理解力的一类书籍；
-二、一类是获取资讯，即获取一些信息，不需要过多的思维思考；
+
+1. 一类是获取知识，即增长智慧，提高自己理解力的一类书籍；
+2. 一类是获取资讯，即获取一些信息，不需要过多的思维思考；
 
 那我们现在再把之前的小说类与技术类的书籍简单的按照上面的规则分类一下。就很明显的区分出来。小说类、传记类的书籍都是属于获取资讯类的书籍。技术类专业性质比较强的书籍都是属于获取知识，增长智慧类的书籍。讲到这里，我们就可以进一步思考一下。在获取读这两类的书籍的时候，我们的大脑是如何思考的。
 
