--- a/source/_posts/2017-07-17-2017上半年总结.md
+++ b/source/_posts/2017-07-17-2017上半年总结.md
@@ -11,7 +11,7 @@ categories: 思维改变生活
 
 ## 开年计划
 
-在2016年的时候就开始写总结了，那之前总是计划很多事情，但是很多事情都没有完成。花了一个月的时间，每天一小时把网易公开课的幸福心理学刷了一遍，才理解知晓了一些事情，人的精力是有限的。于是给自己的定的是，主要事情不超过三个。于是2017开年就给自己定了三个事情。由于一些原因，好像这两件事情都不能说，另外一件事情就是读书，多读书。
+在2016年的时候就开始写总结了，那之前总是计划很多事情，但是很多事情都没有完成。花了一个月的时间，每天一小时把网易公开课的[http://v.163.com/special/positivepsychology/](哈佛积极心理学)学刷了一遍，才理解知晓了一些事情，人的精力是有限的。于是给自己的定的是，主要事情不超过三个。于是2017开年就给自己定了三个事情。由于一些原因，好像这两件事情都不能说，另外一件事情就是读书，多读书。
 
 ## 做的事情
 
